--- a/Découverte_Flask/templates/base.html
+++ b/Découverte_Flask/templates/base.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="{{ url_for('flaskintro') }}">→Découverte Flask <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{{ url_for('flaskintro') }}">→toto fait du ski <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('indexapi') }}">→API REST</a>
