--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Skeleton page</h1>
+<h1>Accueil</h1>
 
-<p>Here is a placeholder</p>
+<p>Bienvenue dans mon royaume, mortels! () j'ai pas pu m'en empécher</p>
 {% endblock %}
