--- a/templates/recherche.html
+++ b/templates/recherche.html
@@ -2,5 +2,11 @@
 
 {% block content %}
 
-<h1>Page De Recherche</h1>
+<h1>Recherche Simple</h1>
+
+  <form class="form-inline mt-2 mt-md-0" method="get" action="/search/">
+    <input class="form-control mr-sm-2" placeholder="Search" aria-label="Search" type="text" name="pattern">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Recherche</button>
+  </form>
+
 {% endblock %}
