--- a/templates/base.html
+++ b/templates/base.html
@@ -1,20 +1,70 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="{{ url_for('static', filename='style.css') }}" rel="stylesheet">
-{% block head %}{% endblock %}
+   <head>
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
+
+    <title>{{ page_title|default('StageBook') }}</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="{{ url_for('static', filename='bootstrap.css') }}" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="{{ url_for('static', filename='sticky-footer-navbar.css') }}" rel="stylesheet">
+
+    <link href="{{ url_for('static', filename='custom.css') }}" rel="stylesheet">
+    {% block head %}{% endblock head %}
   </head>
   <body>
-    <ul>
-      <li><a href="{{ url_for('index') }}#home">Accueil</a></li>
-      <li><a href="{{ url_for('stages') }}">Stages</a></li>
-      <li><a href="{{ url_for('about') }}">A Propos</a></li>
-      <li style="float:right" ><a href="{{ url_for('recherche') }}">Recherche</a></li>
-    </ul>
 
+<header>
+ <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        <a class="navbar-brand" href="{{ url_for('index') }}">Stagebook</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a href="{{ url_for('index') }}#home">Accueil</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">|</a>
+            </li>
+            <li class="nav-item active">
+              <a href="{{ url_for('stages') }}">Stages</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">|</a>
+            </li>
+            <li class="nav-item active">
+              <a href="{{ url_for('about') }}">A Propos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">|</a>
+            </li>
+          </ul>
+
+            <ul class="navbar-nav mx-auto">
+          </ul>
+          <form class="form-inline mt-2 mt-md-0" method="get" action="/search/">
+            <input class="form-control mr-sm-2" placeholder="Recherche" aria-label="Recherche" type="text" name="pattern">
+            <input class="form-control mr-sm-2" type="checkbox" name="regexp">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Recherche</button>
+          </form>
+      </div>
+</nav>
+</header>
 {% block content %}{% endblock %}
 
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+     <script src="{{ url_for('static', filename='jquery-3.js') }}" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='popper.js') }}"></script>
+    <script src="{{ url_for('static', filename='bootstrap.js') }}"></script>
+    {% block script %}{% endblock script %}
   </body>
+
+
 </html>
