--- a/templates/stages.html
+++ b/templates/stages.html
@@ -7,8 +7,9 @@
 
 <p class="lead"> Ci-dessous se trouve la liste des stages par ordre d'ajout. Pour une recherche plus avancée, utilise le bouton Recherche en haut à droite </p> 
 
+<ul style="list-style-type:circle;">
       {% for stage in liste_stages %}
-          <!--  <li><a href="/stages/{{stage.id}}">{{ stage.sujet_stage }}</a></li>   -->!
+          <li><a href="/stages/{{stage.id}}">{{ stage.sujet_stage }}</a></li> 
       {% endfor %}
-
+</ul>
 {% endblock %}
