--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
-    <title>{{ page_title|default('StageBook') }}</title>
+    <title>{{ page_title|default('BioInfo 4A Web dev Introdution modif') }}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename='bootstrap.css') }}" rel="stylesheet">
@@ -45,19 +45,16 @@
             <li class="nav-item">
               <a class="nav-link disabled">|</a>
             </li>
+            <li style="float:right" >
+              <a href="{{ url_for('recherche') }}">Recherche</a>
+            </li>
           </ul>
-
-            <ul class="navbar-nav mx-auto">
-          </ul>
-          <form class="form-inline mt-2 mt-md-0" method="get" action="/search/">
-            <input class="form-control mr-sm-2" placeholder="Recherche" aria-label="Recherche" type="text" name="pattern">
-            <input class="form-control mr-sm-2" type="checkbox" name="regexp">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Recherche</button>
-          </form>
+          
       </div>
-</nav>
 </header>
+<main role="main" class="container">
 {% block content %}{% endblock %}
+</main>
 
     <!-- Placed at the end of the document so the pages load faster -->
      <script src="{{ url_for('static', filename='jquery-3.js') }}" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
