affichage fonctionnel d'un stage
pas très joli mais fonctionnel

--- a/templates/stage.html
+++ b/templates/stage.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1 class="mt-5">{{stage["sujet_stage"]}}</h1>
+<h1 class="mt-5">{{stage["stage_id"]}}</h1>
       <ul>
         {% for key in stage.keys() %}
           {% if key!='id' %}
-          <li> {{key}} : {{user[key]}} </li>
+          <li> {{key}} : {{stage[key]}} </li>
           {% endif %}
         {% endfor %}
       </ul>
