--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
-    <title>{{ page_title|default('BioInfo 4A Web dev Introdution modif') }}</title>
+    <title>{{ page_title|default('StageBook') }}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename='bootstrap.css') }}" rel="stylesheet">
