--- a/templates/recherche.html
+++ b/templates/recherche.html
@@ -3,20 +3,13 @@
 {% block content %}
 
 
-<h1 class="mt-5">Recherche Simple</h1>
+<h2 class="mt-5">Recherche par sujet</h2>
 
-  <form class="form-inline mt-2 mt-md-0" method="get" action="/search/">
+  <form class="form-inline mt-2 mt-md-0" method="get" action="/namesearch/">
     <input class="form-control mr-sm-2" placeholder="" aria-label="Search" type="text" name="pattern">
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
   </form>
 
-<h1 class="mt-1">liste des mots clefs</h1>
-	{{Clefs}}
-<ul style="list-style-type:circle;">
-      {% for clef in Clefs %}
-          <li>  {{clef}} </li> 
-      {% endfor %}
-</ul>
 
 
 
