--- a/templates/recherche.html
+++ b/templates/recherche.html
@@ -2,18 +2,18 @@
 
 {% block content %}
 
-
+<!--
 <h2 class="mt-5">Recherche par sujet</h2>
 
   <form class="form-inline mt-2 mt-md-0" method="get" action="/namesearch/">
     <input class="form-control mr-sm-2" placeholder="" aria-label="Search" type="text" name="pattern">
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Rechercher</button>
   </form>
-
+-->
 
 <h2 class="mt-5">Recherche par mot clef</h2>
 
-	<i>Vous pouvez sellectionnez plusieurs mots clefs avec la touche "Ctrl" par exemple</i>
+	<i>Vous pouvez sellectionnez plusieurs mots clefs avec la touche "Ctrl"</i>
 
 
   <form class="form-inline mt-2 mt-md-0" method="get" action="/keysearch/">
@@ -30,9 +30,4 @@
   </form>
 	  
 
-
-
-
-
-<h1 class="mt-5">Recherche Avancée</h1>
 {% endblock %}
