ajout d'un stage
ajout d'un stage dans la page html : corrections

Signed-off-by: Anissa El marrahi <anissa.el@laposte.net>

--- a/templates/stages.html
+++ b/templates/stages.html
@@ -16,7 +16,7 @@
       {% endfor %}
 </ul>
 
-<form action="" method="get" class="form-example">
+<form action="./app.py" method="get" class="form-example">
   <div class="form-example">
     <label for="sujet_stage">Entrez le sujet du stage : </label>
     <input type="text" name="sujet_stage" id="sujet_stage" required>
@@ -56,9 +56,9 @@
 	<option> Industriel
 </select>
   </div>
-
+<!--
   <div class="form-example">
-    <label for="Type">Type de stage </label>
+    <label for="filiere"> Filière et année </label>
 		<select name="Annee" size=2>
 			<option> 4 BB
 			<option> 4 BIM
@@ -67,7 +67,7 @@
 		</select>
   </div>
   <div class="form-example">
-    <label for="Type">Type de stage </label>
+    <label for="duree">Durée du stage </label>
 		<select name="Annee" size=2>
 			<option> 3 mois
 			<option> 4 mois
@@ -142,6 +142,7 @@
 	<input type="textarea" name="description" id="description"rows = "10" cols="30" required>
 </input>
   </div>
+-->
   <div class="form-example">
     <input type="submit" value="Ajouter">
   </div>
