--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
             </li>
           </ul>
          <form class="form-inline mt-2 mt-md-0" method="get" action="/namesearch/">
-            <input class="form-control mr-sm-2" placeholder="Recherche" aria-label="" type="text" name="pattern">
+            <input class="form-control mr-sm-2" placeholder="Recherche par sujet" aria-label="" type="text" name="pattern">
             <button class="btn btn-outline-success my-2 my-sm-0" type="Rechercher">Rechercher</button>
         </form>
       </div>
