--- a/templates/stages.html
+++ b/templates/stages.html
@@ -26,7 +26,7 @@ Les stages BIM sont en <font color ="purple"> violet</font> et les stages BB en 
       {% endfor %}
 </ul>
 
-<form action="./app.py" method="get" class="form-example">
+<form action="/newstage/" method="post" class="form-example">
   <div class="form-example">
     <label for="sujet_stage">Entrez le sujet du stage : </label>
     <input type="text" name="sujet_stage" id="sujet_stage" required>
@@ -63,10 +63,9 @@ Les stages BIM sont en <font color ="purple"> violet</font> et les stages BB en 
     <label for="Type">Type de stage </label>
 <select name="Type" size=2>
 	<option> Académique
-	<option> Industriel
+	<option> Entreprise
 </select>
   </div>
-<!--
   <div class="form-example">
     <label for="filiere"> Filière et année </label>
 		<select name="Annee" size=2>
@@ -152,7 +151,7 @@ Les stages BIM sont en <font color ="purple"> violet</font> et les stages BB en 
 	<input type="textarea" name="description" id="description"rows = "10" cols="30" required>
 </input>
   </div>
--->
+
   <div class="form-example">
     <input type="submit" value="Ajouter">
   </div>
