Création d'une page API
Signed-off-by: Titouan <gromleur@gmail.com>

--- a/templates/base.html
+++ b/templates/base.html
@@ -48,6 +48,12 @@
             <li style="float:right" >
               <a href="{{ url_for('recherche') }}">Recherche Avancée</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link disabled">|</a>
+            </li>
+	    <li style="float:right" >
+              <a href="{{ url_for('API') }}">API</a>
+            </li>
           </ul>
          <form class="form-inline mt-2 mt-md-0" method="get" action="/namesearch/">
             <input class="form-control mr-sm-2" placeholder="Recherche par sujet" aria-label="" type="text" name="pattern">
