BUgfix ajout de stage dernière modif et ça marche!!
Signed-off-by: Titouan <gromleur@gmail.com>

--- a/templates/stages.html
+++ b/templates/stages.html
@@ -23,8 +23,7 @@ Les stages BIM sont en <font  color= #C70039  > rouge </font> et les stages BB e
 <font color =  #0ab0ba>
 <li><a href="/stages/{{stage.id}}" style="color:   #0ab0ba  ">{{ stage.sujet_stage }}</a></li>
 </font>
-{%endif%} 
-
+{%endif%}
       {% endfor %}
 </ul>
 
@@ -79,7 +78,7 @@ Les stages BIM sont en <font  color= #C70039  > rouge </font> et les stages BB e
   </div>
   <div class="form-example">
     <label for="duree">Durée du stage </label>
-		<select name="Annee" size=2>
+		<select name="Duree" size=2>
 			<option> 3 mois
 			<option> 4 mois
 			<option> 5 mois
