--- a/templates/stage.html
+++ b/templates/stage.html
@@ -16,7 +16,7 @@
             {% if key=='nom_contact' %}
               <li> contact : {{stage[key]}} </li>
             {% endif %}
-            {% if key=='mail_eleve' %}
+            {% if key=='mail_contact' %}
               <li> Adresse e-mail du contact : {{stage[key]}} </li>
             {% endif %}
             {% if key=='MOTS_CLES' %}
