Correction mineure sur page Stage : ajout onglet "ajout"

--- a/templates/stages.html
+++ b/templates/stages.html
@@ -27,6 +27,10 @@ Les stages BIM sont en <font  color= #C70039  > rouge </font> et les stages BB e
       {% endfor %}
 </ul>
 
+<div class="alert alert-primary" role="alert">
+<h4 class="nocount"">Ajouter un stage : </h4> 
+
+</div>
 <form action="/newstage/" method="post" class="form-example">
   <div class="form-example">
     <label for="sujet_stage">Entrez le sujet du stage : </label>
