J'ai ajouté une image
Signed-off-by: Titouan <gromleur@gmail.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <h1>Accueil</h1>
-
+<img class="fit-picture" src="{{url_for('static',filename='Logo_stagebook.jpg')}}">
 
  <article id="intro" class="to_hide">
     <div><hr /></div>
