--- a/templates/about.html
+++ b/templates/about.html
@@ -14,4 +14,33 @@
 {% elif date.hour|int >= 22 %}Good night!
 {% endif %} It's {{time}} !</p>
 
+ <article id="intro" class="to_hide">
+    <div><hr /></div>
+    <h2 class="nocount">Qui sommes-nous ?</h2>
+      <div class="alert alert-primary" role="alert">
+        <p> En 4e année de Biosciences en spécialité Bio-Informatique et Modélisation, nous sommes cinq étudiants motivés par la volonté d'aider nos successeurs, les prochains élèves du département. Confrontés à la dure épreuve d'une recherche de stage dans les bases de données INSA, nous nous sommes vite rendus à l'évidence que l'on pouvait optimiser tout ceci en créant un site adapté. On souhaite aux générations futures des recherches fructueuses, sachant qu'un nombre croissant des 4e année de la promotion 60 ne pourra inscrire de stage à la suite de cet été.</p>
+      </div>
+      
+    <h2 class="nocount">Les collaborateurs de ce projet</h2>
+    <h4 class="nocount">Armande CIROT</h4>
+      <div class="alert alert-dark hr" role="alert">
+        <p> Comme beaucoup d'entre les BIM, Armande s'est retrouvée dans ce département un peu par hasard, simplement en sachant que ce serait celui qui lui conviendrait le mieux. Je laisse à mes petits camarades le soin de se venger de mes méfaits dans cette partie.</p>
+      </div>
+      
+    <h4 class="nocount">Anissa El Marrahi</h4>
+      <div class="alert alert-dark hr" role="alert">
+        <p> Ayant commencé par un parcours orienté vers la médecine, Anissa a su rectifier cela et a rejoint l'INSA un peu plus tard pour venir en BIM. Après un semestre en Argentine pour le début de sa quatrième année, cette princesse marocaine a réussi à échapper aux grottes sombres et humides auxquelles elle semblait condamnée pour continuer à profiter du soleil depuis chez elle, dans la contrée renommée d'Oyonnax. Grâce à son retour imprévu, elle offre régulièrement à sa famille son fameux concerto lyrique, et voit ceux-ci encourager de plus en plus les chercheurs pour trouver un vaccin au plus vite. C'est sa fierté du moment, et elle les félicite en chantant de plus belle.</p>
+      </div>
+    <h4 class="nocount">Claire Lemonnier</h4>
+      <div class="alert alert-dark hr" role="alert">
+        <p> Travailleuse acharnée, aucune matière ne résiste à la volonté de fer de Claire. Si elle veut comprendre, elle comprendra. Avec son âme polyglote, rien n'est de trop pour apprendre, quitte à prendre des cours supplémentaires qui finissent de l'épuiser. Mais ses passions ne s'arrêtent pas là. Claire a brillament réussi à passer son 5e Dan de collection de collants à motifs. On l'en félicite de nouveau.  </p>
+      </div>
+    <h4 class="nocount">Baptiste Sorin</h4>
+      <div class="alert alert-dark hr" role="alert">
+        <p> Breton d'âme et de pull, des rumeurs courent sur ce Nantais, et des paris se font en secret sur le nombre réel de langues qu'il parlent couramment. Dès qu'un chiffre est fixé, il sort des mots d'un nouveau dialecte et les mises continuent de monter. Adepte d'electro pop turque acoustique, Baptiste aime partager ses découvertes musicales avec ses petits camarades, qui lui en sont reconnaissants. Parfois. Ca arrive.</p>
+      </div>
+    <h4 class="nocount">Titouan Poquillon</h4>
+      <div class="alert alert-dark hr" role="alert">
+        <p> Géni sur un grand nombre de points (sauffe un bien conu mé ke l'on ne doit pas cité parcce qu'il es largement compansé par ces autres calités), Titouan a donné son nom aux fameuse questions posées par l'élève qui semblait endormi depuis le début du cours, mais que seul le professeur peut comprendre tellement elles sont précises. Auteur également de l'algorithme créant des algorithmes exponentiellement et venant à bout d'un disque dure en une poignée de minutes, on ne se lasse pas de son humour cassant et de sa passion des jeux. Et de ses débuggages quand le code ne marchent pas. Titouan akbar, on ne le dira jamais assez. </p>
+      </div>
 {% endblock %}
