--- a/templates/about.html
+++ b/templates/about.html
@@ -41,6 +41,6 @@
       </div>
     <h4 class="nocount">Titouan Poquillon</h4>
       <div class="alert alert-dark hr" role="alert">
-        <p> Géni sur un grand nombre de points (sauffe un bien conu mé ke l'on ne doit pas cité parcce qu'il es largement compansé par ces autres calités), Titouan a donné son nom aux fameuse questions posées par l'élève qui semblait endormi depuis le début du cours, mais que seul le professeur peut comprendre tellement elles sont précises. Auteur également de l'algorithme créant des algorithmes exponentiellement et venant à bout d'un disque dure en une poignée de minutes, on ne se lasse pas de son humour cassant et de sa passion des jeux. Et de ses débuggages quand le code ne marchent pas. Titouan akbar, on ne le dira jamais assez. </p>
+        <p> Géni sur un grand nombre de points (sauf un bien connu mais compensé par ses autres qualités), Titouan a donné son nom aux fameuse questions posées par l'élève qui semblait endormi depuis le début du cours, mais que seul le professeur peut comprendre tellement elles sont précises. Auteur également de l'algorithme créant des algorithmes exponentiellement et venant à bout d'un disque dure en une poignée de minutes, on ne se lasse pas de son humour cassant et de sa passion des jeux. Et de ses débuggages quand le code ne marchent pas. Titouan akbar, on ne le dira jamais assez. </p>
       </div>
 {% endblock %}
