--- a/templates/stage.html
+++ b/templates/stage.html
@@ -25,4 +25,8 @@
           {% endif %} 
         {% endfor %}
       </ul>
+<form class="form-inline mt-2 mt-md-0" method="post" action="/api/telechargement?liste={{stage['id']}}">
+
+<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Données JSON</button>
+</form>
 {% endblock %}
