--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <div><hr /></div>
     <h2 class="nocount">Qu'est-ce que ce site ? </h2>
       <div class="alert alert-primary" role="alert">
-        <p> StageBook est un site web répertoriant les stages effectués par les élèves de Biosciences. Il est né d'une volonté de créer une base de données ressource facile d'accès pour les élèves lors de leur propre recherche.</p>
+        <p> StageBook est un site web répertoriant les stages effectués par les élèves de Biosciences. Il est né d'une volonté de créer une base de données qui soit un ressource facile d'accès pour les élèves lors de leur propre recherche de stage.</p>
       </div>
     <h2 class=nocount>Architecture générale de la page</h2>
     <div class="alert alert-dark hr">
@@ -21,12 +21,12 @@
     
     <h3 class=nocount>Page de présentation par stage</h3>
     <div class="alert alert-dark">
-    <p> Chaque stage repertorié possède un certain nombre d'informations, listées ici. On retrouve le sujet, la structure d'accueil, la ville, le pays, l'élève ayant effectué le stage ainsi que son adresse mail. On peut aussi avoir accès au responsable du stage et à son adresse mail, à une description succinte du stage et à des mots clés. Ces derniers indiquent la durée, le caractère académique ou privé du stage, ainsi que les champs d'application. </p>
+    <p> Chaque stage repertorié possède un certain nombre d'informations, listées ici. On retrouve le sujet, la structure d'accueil, la ville, le pays, l'élève ayant effectué le stage ainsi que son adresse mail. On peut aussi avoir accès au nom du responsable du stage et à son adresse mail, à une description succinte du stage et aux mots clés lui étant associés. Ces derniers indiquent la durée, le caractère académique ou privé du stage, ainsi que les champs d'application. </p>
         </div>
         
     <h3 class=nocount>Recherche avancée</h3>
     <div class="alert alert-dark">
-    <p> En plus de la barre de recherche, cette page permet de trier les stages de la liste selon des critères qui correspondent aux mots-clés. Ainsi, l'utilisateur peut sélectionner un stage selon la fillière à laquelle il s'adresse, sa durée, ses champs d'application ou encore choisir un stage en France ou à l'étranger. </p>
+    <p> En plus de la barre de recherche, cette page permet de trier les stages de la liste selon des critères qui correspondent aux mots-clés. Ainsi, l'utilisateur peut sélectionner un stage selon la fillière (BIM/BB) à laquelle il s'adresse, sa durée, ses champs d'application ou encore choisir un stage en France ou à l'étranger. </p>
     </div>
     
     <h3 class=nocount>A propos</h3>
