AJout tuto json

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
       </div>
     <h3 class=nocount>Stages</h3>
     <div class="alert alert-dark">
-    <p> Cette page liste tous les stages de la base de données, avec un code couleur selon qu'ils soient adressés aux BIM ou aux BB. Chaque stage a sa propre page, accessible en cliquant sur le lien.  </p>
+    <p> Cette page liste tous les stages de la base de données, avec un code couleur selon qu'ils soient adressés aux BIM ou aux BB. Chaque stage a sa propre page, accessible en cliquant sur le lien. De plus, il est possible de récupérer les données d'un ou plusieurs stages avec le bouton "Données JSON". Il suffit de cliquer dessus pour afficher la totalité des données des stages en JSON, puis de les enregistrer en cliquant sur "Save" (en haut à gauche de votre navigateur).</p>
     </div>
     
     <h3 class=nocount>Page de présentation par stage</h3>
