--- a/templates/about.html
+++ b/templates/about.html
@@ -24,12 +24,12 @@
     <h2 class="nocount">Les collaborateurs de ce projet</h2>
     <h4 class="nocount">Armande CIROT</h4>
       <div class="alert alert-dark hr" role="alert">
-        <p> Comme beaucoup d'entre les BIM, Armande s'est retrouvée dans ce département un peu par hasard, simplement en sachant que ce serait celui qui lui conviendrait le mieux. Je laisse à mes petits camarades le soin de se venger de mes méfaits dans cette partie.</p>
+        <p> Comme beaucoup d'entre les BIM, Armande s'est retrouvée dans ce département un peu par hasard, simplement en sachant que ce serait celui qui lui conviendrait le mieux. Sa passion pour le thêatre la fait sourire (beaucoup) mais aussi râler (beaucoup aussi), nombreuses heures supplémentaires obligent. C'est néanmmoins avec courage et détermination qu'elle mène la dure mais belle vie des théatres-études. Travaille efficacement entre les pauses au soleil.</p>
       </div>
       
     <h4 class="nocount">Anissa El Marrahi</h4>
       <div class="alert alert-dark hr" role="alert">
-        <p> Ayant commencé par un parcours orienté vers la médecine, Anissa a su rectifier cela et a rejoint l'INSA un peu plus tard pour venir en BIM. Après un semestre en Argentine pour le début de sa quatrième année, cette princesse marocaine a réussi à échapper aux grottes sombres et humides auxquelles elle semblait condamnée pour continuer à profiter du soleil depuis chez elle, dans la contrée renommée d'Oyonnax. Grâce à son retour imprévu, elle offre régulièrement à sa famille son fameux concerto lyrique, et voit ceux-ci encourager de plus en plus les chercheurs pour trouver un vaccin au plus vite. C'est sa fierté du moment, et elle les félicite en chantant de plus belle.</p>
+        <p> Ayant commencé par un parcours orienté vers la médecine, Anissa a su rectifier cela et a rejoint l'INSA un peu plus tard pour venir en BIM. Après un semestre en Argentine pour le début de sa quatrième année, cette princesse marocaine a réussi à échapper aux grottes sombres et humides auxquelles elle semblait condamnée pour continuer à profiter du soleil depuis chez elle, dans la contrée renommée d'Oyonnax. Grâce à son retour imprévu, elle offre régulièrement à sa famille son fameux concerto lyrique, et voit ceux-ci encourager de plus en plus les chercheurs pour trouver un vaccin au plus vite. C'est sa fierté du moment, et elle les félicite en chantant de plus belle. </p>
       </div>
     <h4 class="nocount">Claire Lemonnier</h4>
       <div class="alert alert-dark hr" role="alert">
@@ -37,10 +37,10 @@
       </div>
     <h4 class="nocount">Baptiste Sorin</h4>
       <div class="alert alert-dark hr" role="alert">
-        <p> Breton d'âme et de pull, des rumeurs courent sur ce Nantais, et des paris se font en secret sur le nombre réel de langues qu'il parlent couramment. Dès qu'un chiffre est fixé, il sort des mots d'un nouveau dialecte et les mises continuent de monter. Adepte d'electro pop turque acoustique, Baptiste aime partager ses découvertes musicales avec ses petits camarades, qui lui en sont reconnaissants. Parfois. Ca arrive.</p>
+        <p> Breton d'âme et de pull, des rumeurs courent sur ce Nantais, et des paris se font en secret sur le nombre réel de langues qu'il parle couramment. Dès qu'un chiffre est fixé, il sort des mots d'un nouveau dialecte et les mises continuent de monter. Adepte d'electro pop turque acoustique, Baptiste aime partager ses découvertes musicales avec ses petits camarades, qui lui en sont reconnaissants. Parfois. Ca arrive. Point faible : n'aime pas qu'on lui rappelle que Nantes n'est pas en Bretagne, et que les marinières qu'il aime tant porter ne trompent personne.</p>
       </div>
     <h4 class="nocount">Titouan Poquillon</h4>
       <div class="alert alert-dark hr" role="alert">
-        <p> Géni sur un grand nombre de points (sauf un bien connu mais compensé par ses autres qualités), Titouan a donné son nom aux fameuse questions posées par l'élève qui semblait endormi depuis le début du cours, mais que seul le professeur peut comprendre tellement elles sont précises. Auteur également de l'algorithme créant des algorithmes exponentiellement et venant à bout d'un disque dure en une poignée de minutes, on ne se lasse pas de son humour cassant et de sa passion des jeux. Et de ses débuggages quand le code ne marchent pas. Titouan akbar, on ne le dira jamais assez. </p>
+        <p> Géni sur un grand nombre de points (sauf un bien connu mais compensé par ses autres qualités), Titouan a donné son nom aux fameuse questions posées par l'élève qui semblait endormi depuis le début du cours, mais que seul le professeur peut comprendre tellement elles sont précises. Derrière une épaisse et indomptée toison capillaire se cache l'auteur de l'algorithme créant des algorithmes exponentiellement et venant à bout d'un disque dure en une poignée de minutes. On ne se lasse pas de son humour cassant et de sa passion des jeux. Et de ses débuggages quand le code ne marchent pas. Titouan akbar, on ne le dira jamais assez. </p>
       </div>
 {% endblock %}
