--- a/templates/about.html
+++ b/templates/about.html
@@ -24,7 +24,7 @@
     <h2 class="nocount">Les collaborateurs de ce projet</h2>
     <h4 class="nocount">Armande CIROT</h4>
       <div class="alert alert-dark hr" role="alert">
-        <p> Comme beaucoup d'entre les BIM, Armande s'est retrouvée dans ce département un peu par hasard, simplement en sachant que ce serait celui qui lui conviendrait le mieux. Sa passion pour le thêatre la fait sourire (beaucoup) mais aussi râler (beaucoup aussi), nombreuses heures supplémentaires obligent. C'est néanmmoins avec courage et détermination qu'elle mène la dure mais belle vie des théatres-études. Travaille efficacement entre les pauses au soleil.</p>
+        <p> Comme beaucoup d'entre les BIM, Armande s'est retrouvée dans ce département un peu par hasard, simplement en sachant que ce serait celui qui lui conviendrait le mieux. Sa passion pour le thêatre la fait sourire (beaucoup) mais aussi râler (beaucoup également), nombreuses heures supplémentaires obligent. C'est néanmmoins avec courage et détermination qu'elle mène la dure mais belle vie des théatres-études. Travaille efficacement entre les pauses au soleil.</p>
       </div>
       
     <h4 class="nocount">Anissa El Marrahi</h4>
@@ -41,6 +41,6 @@
       </div>
     <h4 class="nocount">Titouan Poquillon</h4>
       <div class="alert alert-dark hr" role="alert">
-        <p> Géni sur un grand nombre de points (sauf un bien connu mais compensé par ses autres qualités), Titouan a donné son nom aux fameuses questions posées par l'élève qui semblait endormi depuis le début du cours, mais que seul le professeur peut comprendre tellement elles sont précises. Derrière une épaisse et indomptée toison capillaire se cache l'auteur de l'algorithme créant des algorithmes exponentiellement et venant à bout d'un disque dur en une poignée de minutes. On ne se lasse pas de son humour cassant et de sa passion des jeux. Et de ses débuggages quand le code ne marche pas. Titouan akbar, on ne le dira jamais assez. </p>
+        <p> Génie sur un grand nombre de points (sauf un bien connu mais compansé par ses autres qualités), Titouan a donné son nom aux fameuses questions posées par l'élève qui semblait endormi depuis le début du cours, mais que seul le professeur peut comprendre tellement elles sont précises. Derrière une épaisse et indomptée toison capillaire se cache l'auteur de l'algorithme créant des algorithmes exponentiellement et venant à bout d'un disque dur en une poignée de minutes. On ne se lasse pas de son humour cassant et de sa passion des jeux. Et de ses débuggages quand le code ne marche pas. Titouan akbar, on ne le dira jamais assez. </p>
       </div>
 {% endblock %}
